--- a/.HTACCESS
+++ b/.HTACCESS
@@ -5,3 +5,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule ^(.*)$ $1.php
 </IfModule>
+
+#404
+ErrorDocument 404 http://localhost/SUSBank/404.php
